parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> expression end_of_line
Rule 2     start -> empty
Rule 3     end_of_line -> eol
Rule 4     expression -> impressao
Rule 5     expression -> atribuicao
Rule 6     expression -> exec
Rule 7     empty -> <empty>
Rule 8     impressao -> imprimir abre_parentese num fecha_parentese
Rule 9     impressao -> imprimir abre_parentese id fecha_parentese
Rule 10    executar -> exec abre_parentese id virgula vetor fecha_parentese
Rule 11    vetor -> abre_colchete items fecha_colchete
Rule 12    items -> item virgula items
Rule 13    items -> item
Rule 14    item -> bin
Rule 15    item -> id
Rule 16    item -> entradas_saida
Rule 17    atribuicao -> tipo id atrib atribuiveis
Rule 18    atribuiveis -> num
Rule 19    atribuiveis -> executar
Rule 20    atribuiveis -> porta_logica
Rule 21    porta_logica -> abre_chave numero_de_entradas virgula tabela_verdade virgula fecha_chave
Rule 22    numero_de_entradas -> ne chave_valor num
Rule 23    tabela_verdade -> tv chave_valor abre_chave items fecha_chave
Rule 24    entradas_saida -> vetor chave_valor bin
Rule 25    tipo -> sinal
Rule 26    tipo -> porta_log

Terminals, with rules where they appear

abre_chave           : 21 23
abre_colchete        : 11
abre_parentese       : 8 9 10
atrib                : 17
bin                  : 14 24
chave_valor          : 22 23 24
eol                  : 3
error                : 
exec                 : 6 10
fecha_chave          : 21 23
fecha_colchete       : 11
fecha_parentese      : 8 9 10
id                   : 9 10 15 17
imprimir             : 8 9
ne                   : 22
num                  : 8 18 22
porta_log            : 26
sinal                : 25
tv                   : 23
virgula              : 10 12 21 21

Nonterminals, with rules where they appear

atribuicao           : 5
atribuiveis          : 17
empty                : 2
end_of_line          : 1
entradas_saida       : 16
executar             : 19
expression           : 1
impressao            : 4
item                 : 12 13
items                : 11 12 23
numero_de_entradas   : 21
porta_logica         : 20
start                : 0
tabela_verdade       : 21
tipo                 : 17
vetor                : 10 24

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . expression end_of_line
    (2) start -> . empty
    (4) expression -> . impressao
    (5) expression -> . atribuicao
    (6) expression -> . exec
    (7) empty -> .
    (8) impressao -> . imprimir abre_parentese num fecha_parentese
    (9) impressao -> . imprimir abre_parentese id fecha_parentese
    (17) atribuicao -> . tipo id atrib atribuiveis
    (25) tipo -> . sinal
    (26) tipo -> . porta_log

    exec            shift and go to state 6
    $end            reduce using rule 7 (empty -> .)
    imprimir        shift and go to state 7
    sinal           shift and go to state 9
    porta_log       shift and go to state 10

    start                          shift and go to state 1
    expression                     shift and go to state 2
    empty                          shift and go to state 3
    impressao                      shift and go to state 4
    atribuicao                     shift and go to state 5
    tipo                           shift and go to state 8

state 1

    (0) S' -> start .



state 2

    (1) start -> expression . end_of_line
    (3) end_of_line -> . eol

    eol             shift and go to state 12

    end_of_line                    shift and go to state 11

state 3

    (2) start -> empty .

    $end            reduce using rule 2 (start -> empty .)


state 4

    (4) expression -> impressao .

    eol             reduce using rule 4 (expression -> impressao .)


state 5

    (5) expression -> atribuicao .

    eol             reduce using rule 5 (expression -> atribuicao .)


state 6

    (6) expression -> exec .

    eol             reduce using rule 6 (expression -> exec .)


state 7

    (8) impressao -> imprimir . abre_parentese num fecha_parentese
    (9) impressao -> imprimir . abre_parentese id fecha_parentese

    abre_parentese  shift and go to state 13


state 8

    (17) atribuicao -> tipo . id atrib atribuiveis

    id              shift and go to state 14


state 9

    (25) tipo -> sinal .

    id              reduce using rule 25 (tipo -> sinal .)


state 10

    (26) tipo -> porta_log .

    id              reduce using rule 26 (tipo -> porta_log .)


state 11

    (1) start -> expression end_of_line .

    $end            reduce using rule 1 (start -> expression end_of_line .)


state 12

    (3) end_of_line -> eol .

    $end            reduce using rule 3 (end_of_line -> eol .)


state 13

    (8) impressao -> imprimir abre_parentese . num fecha_parentese
    (9) impressao -> imprimir abre_parentese . id fecha_parentese

    num             shift and go to state 15
    id              shift and go to state 16


state 14

    (17) atribuicao -> tipo id . atrib atribuiveis

    atrib           shift and go to state 17


state 15

    (8) impressao -> imprimir abre_parentese num . fecha_parentese

    fecha_parentese shift and go to state 18


state 16

    (9) impressao -> imprimir abre_parentese id . fecha_parentese

    fecha_parentese shift and go to state 19


state 17

    (17) atribuicao -> tipo id atrib . atribuiveis
    (18) atribuiveis -> . num
    (19) atribuiveis -> . executar
    (20) atribuiveis -> . porta_logica
    (10) executar -> . exec abre_parentese id virgula vetor fecha_parentese
    (21) porta_logica -> . abre_chave numero_de_entradas virgula tabela_verdade virgula fecha_chave

    num             shift and go to state 21
    exec            shift and go to state 24
    abre_chave      shift and go to state 25

    atribuiveis                    shift and go to state 20
    executar                       shift and go to state 22
    porta_logica                   shift and go to state 23

state 18

    (8) impressao -> imprimir abre_parentese num fecha_parentese .

    eol             reduce using rule 8 (impressao -> imprimir abre_parentese num fecha_parentese .)


state 19

    (9) impressao -> imprimir abre_parentese id fecha_parentese .

    eol             reduce using rule 9 (impressao -> imprimir abre_parentese id fecha_parentese .)


state 20

    (17) atribuicao -> tipo id atrib atribuiveis .

    eol             reduce using rule 17 (atribuicao -> tipo id atrib atribuiveis .)


state 21

    (18) atribuiveis -> num .

    eol             reduce using rule 18 (atribuiveis -> num .)


state 22

    (19) atribuiveis -> executar .

    eol             reduce using rule 19 (atribuiveis -> executar .)


state 23

    (20) atribuiveis -> porta_logica .

    eol             reduce using rule 20 (atribuiveis -> porta_logica .)


state 24

    (10) executar -> exec . abre_parentese id virgula vetor fecha_parentese

    abre_parentese  shift and go to state 26


state 25

    (21) porta_logica -> abre_chave . numero_de_entradas virgula tabela_verdade virgula fecha_chave
    (22) numero_de_entradas -> . ne chave_valor num

    ne              shift and go to state 28

    numero_de_entradas             shift and go to state 27

state 26

    (10) executar -> exec abre_parentese . id virgula vetor fecha_parentese

    id              shift and go to state 29


state 27

    (21) porta_logica -> abre_chave numero_de_entradas . virgula tabela_verdade virgula fecha_chave

    virgula         shift and go to state 30


state 28

    (22) numero_de_entradas -> ne . chave_valor num

    chave_valor     shift and go to state 31


state 29

    (10) executar -> exec abre_parentese id . virgula vetor fecha_parentese

    virgula         shift and go to state 32


state 30

    (21) porta_logica -> abre_chave numero_de_entradas virgula . tabela_verdade virgula fecha_chave
    (23) tabela_verdade -> . tv chave_valor abre_chave items fecha_chave

    tv              shift and go to state 34

    tabela_verdade                 shift and go to state 33

state 31

    (22) numero_de_entradas -> ne chave_valor . num

    num             shift and go to state 35


state 32

    (10) executar -> exec abre_parentese id virgula . vetor fecha_parentese
    (11) vetor -> . abre_colchete items fecha_colchete

    abre_colchete   shift and go to state 37

    vetor                          shift and go to state 36

state 33

    (21) porta_logica -> abre_chave numero_de_entradas virgula tabela_verdade . virgula fecha_chave

    virgula         shift and go to state 38


state 34

    (23) tabela_verdade -> tv . chave_valor abre_chave items fecha_chave

    chave_valor     shift and go to state 39


state 35

    (22) numero_de_entradas -> ne chave_valor num .

    virgula         reduce using rule 22 (numero_de_entradas -> ne chave_valor num .)


state 36

    (10) executar -> exec abre_parentese id virgula vetor . fecha_parentese

    fecha_parentese shift and go to state 40


state 37

    (11) vetor -> abre_colchete . items fecha_colchete
    (12) items -> . item virgula items
    (13) items -> . item
    (14) item -> . bin
    (15) item -> . id
    (16) item -> . entradas_saida
    (24) entradas_saida -> . vetor chave_valor bin
    (11) vetor -> . abre_colchete items fecha_colchete

    bin             shift and go to state 43
    id              shift and go to state 44
    abre_colchete   shift and go to state 37

    items                          shift and go to state 41
    item                           shift and go to state 42
    entradas_saida                 shift and go to state 45
    vetor                          shift and go to state 46

state 38

    (21) porta_logica -> abre_chave numero_de_entradas virgula tabela_verdade virgula . fecha_chave

    fecha_chave     shift and go to state 47


state 39

    (23) tabela_verdade -> tv chave_valor . abre_chave items fecha_chave

    abre_chave      shift and go to state 48


state 40

    (10) executar -> exec abre_parentese id virgula vetor fecha_parentese .

    eol             reduce using rule 10 (executar -> exec abre_parentese id virgula vetor fecha_parentese .)


state 41

    (11) vetor -> abre_colchete items . fecha_colchete

    fecha_colchete  shift and go to state 49


state 42

    (12) items -> item . virgula items
    (13) items -> item .

    virgula         shift and go to state 50
    fecha_colchete  reduce using rule 13 (items -> item .)
    fecha_chave     reduce using rule 13 (items -> item .)


state 43

    (14) item -> bin .

    virgula         reduce using rule 14 (item -> bin .)
    fecha_colchete  reduce using rule 14 (item -> bin .)
    fecha_chave     reduce using rule 14 (item -> bin .)


state 44

    (15) item -> id .

    virgula         reduce using rule 15 (item -> id .)
    fecha_colchete  reduce using rule 15 (item -> id .)
    fecha_chave     reduce using rule 15 (item -> id .)


state 45

    (16) item -> entradas_saida .

    virgula         reduce using rule 16 (item -> entradas_saida .)
    fecha_colchete  reduce using rule 16 (item -> entradas_saida .)
    fecha_chave     reduce using rule 16 (item -> entradas_saida .)


state 46

    (24) entradas_saida -> vetor . chave_valor bin

    chave_valor     shift and go to state 51


state 47

    (21) porta_logica -> abre_chave numero_de_entradas virgula tabela_verdade virgula fecha_chave .

    eol             reduce using rule 21 (porta_logica -> abre_chave numero_de_entradas virgula tabela_verdade virgula fecha_chave .)


state 48

    (23) tabela_verdade -> tv chave_valor abre_chave . items fecha_chave
    (12) items -> . item virgula items
    (13) items -> . item
    (14) item -> . bin
    (15) item -> . id
    (16) item -> . entradas_saida
    (24) entradas_saida -> . vetor chave_valor bin
    (11) vetor -> . abre_colchete items fecha_colchete

    bin             shift and go to state 43
    id              shift and go to state 44
    abre_colchete   shift and go to state 37

    items                          shift and go to state 52
    item                           shift and go to state 42
    entradas_saida                 shift and go to state 45
    vetor                          shift and go to state 46

state 49

    (11) vetor -> abre_colchete items fecha_colchete .

    fecha_parentese reduce using rule 11 (vetor -> abre_colchete items fecha_colchete .)
    chave_valor     reduce using rule 11 (vetor -> abre_colchete items fecha_colchete .)


state 50

    (12) items -> item virgula . items
    (12) items -> . item virgula items
    (13) items -> . item
    (14) item -> . bin
    (15) item -> . id
    (16) item -> . entradas_saida
    (24) entradas_saida -> . vetor chave_valor bin
    (11) vetor -> . abre_colchete items fecha_colchete

    bin             shift and go to state 43
    id              shift and go to state 44
    abre_colchete   shift and go to state 37

    item                           shift and go to state 42
    items                          shift and go to state 53
    entradas_saida                 shift and go to state 45
    vetor                          shift and go to state 46

state 51

    (24) entradas_saida -> vetor chave_valor . bin

    bin             shift and go to state 54


state 52

    (23) tabela_verdade -> tv chave_valor abre_chave items . fecha_chave

    fecha_chave     shift and go to state 55


state 53

    (12) items -> item virgula items .

    fecha_colchete  reduce using rule 12 (items -> item virgula items .)
    fecha_chave     reduce using rule 12 (items -> item virgula items .)


state 54

    (24) entradas_saida -> vetor chave_valor bin .

    virgula         reduce using rule 24 (entradas_saida -> vetor chave_valor bin .)
    fecha_colchete  reduce using rule 24 (entradas_saida -> vetor chave_valor bin .)
    fecha_chave     reduce using rule 24 (entradas_saida -> vetor chave_valor bin .)


state 55

    (23) tabela_verdade -> tv chave_valor abre_chave items fecha_chave .

    virgula         reduce using rule 23 (tabela_verdade -> tv chave_valor abre_chave items fecha_chave .)

